[package]
name = "hass-tether-agent"
version = "0.2.2"
edition = "2021"


[dependencies]
env_logger = "0.10.0"
hass-rs = { git = "https://github.com/danrusei/hass-rs.git" }
lazy_static = "1.4.0"
url = "2.4.0"
tether-agent = "0.12.1"
serde = "1.0.171"
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0.103"
hash_map_diff = "0.2.0"
